// TODO: clean this up

syntax = "proto3";
package youtube;

message VisitorData {
  required string id = 1;
  required int32 timestamp = 5;
}

message InnertubePayload {
  message Context {
    message Client {
      string deviceMake = 12;
      string deviceModel = 13;
      int32 nameId = 16;
      string clientVersion = 17;
      string osName = 18;
      string osVersion = 19;
      string acceptLanguage = 21;
      string acceptRegion = 22;
      int32 windowWidthPoints = 37;
      int32 windowHeightPoints = 38;
      int32 androidSdkVersion = 34;
    }
    required Client client = 1;
  }
  
  required Context context = 1;

  optional bytes po_token = 27;
  
  optional string videoId = 2;
  
  /**** YT Sudio stuff ****/ 
  
  message Title {
    required string text = 1;
  }
  
  optional Title title = 3;
  
  message Description {
    required string text = 1;
  }
  
  optional Description description = 4;
  
  message Tags {
    repeated string list = 1;
  }
  
  optional Tags tags = 6;
  
  message Privacy {
    required int32 type = 1;
  }
  
  optional Privacy privacy = 38;
  
  message Category {
    required int32 id = 1;
  }
  
  optional Category category = 7;
  
  message MadeForKids {
    required int32 unkparam = 1;
    required int32 choice = 2;
  }
  
  optional MadeForKids made_for_kids = 68;
  
  message AgeRestricted {
    required int32 unkparam = 1;
    required int32 choice = 2;
  }
  
  optional AgeRestricted age_restricted = 69;

  message License {
    required string type = 1;
  }
  
  optional License license = 8;
  
  message VideoThumbnail {
    required int32 type = 1; // is this something else?
 
    message Thumbnail {
      required bytes image_data = 1;
    }
    
    required Thumbnail thumbnail = 3;
  }
  
  optional VideoThumbnail video_thumbnail = 20;
}

message ChannelAnalytics {
  message Params {
    required string channel_id = 1001;
  }

  required Params params = 32;
}

message SoundInfoParams {
  message Sound {
    message Params {
      message Ids {
        required string id_1 = 1;
        required string id_2 = 2;
        required string id_3 = 3;
      }
      required Ids ids = 2;
    }
    required Params params = 1;
  }
  
  required Sound sound = 94;
}

message NotificationPreferences {
  required string channel_id = 1;
 
  message Preference {
    required int32 index = 1;
  }
  
  required Preference pref_id = 2;
  
  optional int32 number_0 = 3;
  optional int32 number_1 = 4;
}

message LiveMessageParams {
  message Params {
    message Ids {
      required string channel_id = 1;
      required string video_id = 2;
    }
   required  Ids ids = 5;
  }
  
  required Params params = 1;
  
  optional int32 number_0 = 2;
  optional int32 number_1 = 3;
}

message GetCommentsSectionParams {
  message Context {
    required string video_id = 2;
  }
  required Context ctx = 2;
  
  required int32 unk_param = 3;
  
  message Params {
    optional string unk_token = 1;
    
    message Options {
      required string video_id = 4;
      required int32 sort_by = 6;
      required int32 type = 15;
      optional string comment_id = 16;
    }
    
    message RepliesOptions {
      required string comment_id = 2;
    
      message UnkOpts {
        required int32 unk_param = 1;
      }
      required UnkOpts unkopts = 4;
      
      optional string channel_id = 5;
      required string video_id = 6;
      
      required int32 unk_param_1 = 8;
      required int32 unk_param_2 = 9;
    }
    
    optional Options opts = 4;
    optional RepliesOptions replies_opts = 3;
    
    optional int32 page = 5;
    required string target = 8;
  }
  
  required Params params = 6;
}

message CreateCommentParams {
  required string video_id = 2;
  message Params {
    required int32 index = 1;
  }
  required Params params = 5;
  required int32 number = 10;
}

message PeformCommentActionParams {
  required int32 type = 1;
  required string comment_id = 3;
  required string video_id = 5;
  
  optional int32 unk_num = 2;
  optional string channel_id = 23;
  
  message TranslateCommentParams {
    message Params {
      message Comment {
        required string text = 1;
      }
      required Comment comment = 1;
    }
    required Params params = 3;
    
    required string comment_id = 2;
    required string target_language = 4;
  }
  
  optional TranslateCommentParams translate_comment_params = 31;
}

message MusicSearchFilter {
  message Filters {
    message Type {
      // TODO: protoc doesn't allow zero index: optional int32 all = 0;
      optional int32 song = 1;
      optional int32 video = 2;
      optional int32 album = 3;
      optional int32 artist = 4;
      optional int32 playlist = 5;
    }
    
    optional Type type = 17;
  }
  
  optional Filters filters = 2;
}

message SearchFilter {
  optional int32 sort_by = 1;
  optional int32 no_filter = 19;
  
  message Filters {
    optional int32 upload_date = 1;
    optional int32 type = 2;
    optional int32 duration = 3;

    optional int32 features_hd = 4;
    optional int32 features_subtitles = 5;
    optional int32 features_creative_commons = 6;
    optional int32 features_3d = 7;
    optional int32 features_live = 8;
    optional int32 features_purchased = 9;
    optional int32 features_4k = 14;
    optional int32 features_360 = 15;
    optional int32 features_location = 23;
    optional int32 features_hdr = 25;
    optional int32 features_vr180 = 26; 
  }
  
  optional Filters filters = 2;
}

message Hashtag {
  message Params {
    required string hashtag = 1;
    required int32 type = 3;
  }
  
  required Params params = 93;
}

message ReelSequence {
  required string short_id = 1;
  message Params {
    required int32 number = 3;
  }

  required Params params = 5;
  required int32 feature_2 = 10;
  required int32 feature_3 = 13;
}

message ShortsParam {
  message Field1 {
    optional int32 p1 = 1;
  }
  optional Field1 f1 = 1;
  optional int32 p59 = 59;
}

message FormatId {
  optional int32 itag = 1;
  optional uint64 last_modified = 2;
  optional string xtags = 3;
}

message InitRange {
  optional int32 start = 1;
  optional int32 end = 2;
}

message IndexRange {
  optional int32 start = 1;
  optional int32 end = 2;
}

message PlaybackCookie {
  optional int32 field1 = 1; // Always 999999??
  optional int32 field2 = 2;
  optional FormatId video_fmt = 7;
  optional FormatId audio_fmt = 8;
}

message Redirect {
  optional string url = 1;
}

message PlaybackStartPolicy {
  message ReadaheadPolicy {
    optional int32 min_readahead_ms = 2;
    optional int32 min_bandwidth_bytes_per_sec = 1;
  }

  optional ReadaheadPolicy start_min_readahead_policy = 1;
  optional ReadaheadPolicy resume_min_readahead_policy = 2;
}

message RequestCancellationPolicy {
  message Item {
    optional int32 fR = 1;
    optional int32 NK = 2;
    optional int32 minReadaheadMs = 3;
  }

  optional int32 N0 = 1;
  repeated Item items = 2;
  optional int32 jq = 3;
}

message NextRequestPolicy {
  optional int32 target_audio_readahead_ms = 1;
  optional int32 target_video_readahead_ms = 2;
  optional int32 backoff_time_ms = 4;
  optional PlaybackCookie playback_cookie = 7;
  optional string video_id = 8;
}

message StreamProtectionStatus {
  optional int32 status = 1;
  optional int32 field2 = 2;
}

message FormatInitializationMetadata {
  optional string video_id = 1;
  optional FormatId format_id = 2;
  optional int32 end_time_ms = 3;
  optional int32 field4 = 4;
  optional string mime_type = 5;
  optional InitRange init_range = 6;
  optional IndexRange index_range = 7;
  optional int32 field8 = 8;
  optional int32 duration_ms = 9;
  optional int32 field10 = 10; 
}

message MediaHeader {
  message TimeRange {
    optional int32 field1 = 1;
    optional int32 field2 = 2;
    optional int32 field3 = 3;
  }

  enum Compression {
    VAL0 = 0;
    VAL1 = 1;
    GZIP = 2;
  }

  optional int32 header_id = 1; 
  optional string video_id = 2;
  optional int32 itag = 3;
  optional uint64 lmt = 4;
  optional string xtags = 5;
  optional int32 start_data_range = 6;
  optional Compression compression = 7;
  optional bool is_init_seg = 8;
  optional int64 sequence_number = 9;
  optional int64 field10 = 10;
  optional int32 start_ms = 11;
  optional int32 duration_ms = 12;
  optional FormatId format_id = 13;
  optional int64 content_length = 14;
  optional TimeRange time_range = 15;
}

message SabrError {
  optional string type = 1;
  optional int32 code = 2;
}

message HttpHeader {
	optional string name = 1;
	optional string value = 2;
}

message OnesieRequest {
	optional string url = 1;
	repeated HttpHeader headers = 2;
	optional string body = 3;
	optional bool field4 = 4;
	optional bool field6 = 6;
}

message MediaInfo {
  message MediaCapabilities {
    message VideoFormatCapability {
      optional int32 video_codec = 1;
      optional int32 max_height = 3;
      optional int32 max_width = 4;
      optional int32 max_framerate = 11;
      optional int32 max_bitrate_bps = 12;
      optional bool is_10_bit_supported = 15;
    }
    message AudioFormatCapability {
      optional int32 audio_codec = 1;
      optional int32 num_channels = 2;
      optional int32 max_bitrate_bps = 3;
      optional int32 spatial_capability_bitmask = 6;
    }
     repeated VideoFormatCapability video_format_capabilities = 1;
     repeated AudioFormatCapability audio_format_capabilities = 2;
     optional int32 hdr_mode_bitmask = 5;
  }

  optional int32 time_since_last_manual_format_selection_ms = 13;
  optional int32 last_manual_direction = 14;
  optional int32 j = 16;
  optional int32 detailed_network_type = 17;
  optional int32 B7 = 18;
  optional int32 A7 = 19;
  optional int32 iea = 21;
  optional int32 r7 = 23;
  optional int32 sS = 28;
  optional int32 zea = 29;
  optional int32 visibility = 34;
  optional int32 d8 = 36;
  optional MediaCapabilities media_capabilities = 38;
  optional int32 yea = 39;
  optional int32 Gw = 40;
  optional int32 player_state = 44;
  optional bool a8 = 46;
  optional int32 Jda = 48;
  optional int32 qw = 50;
  optional int32 Ky = 51;
  optional int32 Eq = 54;
  optional bool l = 56;
  optional int32 G7 = 57;
  optional bool No = 58;
  optional int32 qj = 59;
  optional int32 Hx = 60;
  optional bool is_prefetch = 61;
  optional int32 Iz = 62;
  optional bytes sabr_license_constraint = 63;
  optional int32 l2 = 64;
  optional int32 k2 = 66;
  optional int32 Tqb = 67;
  optional int32 c = 68;
}

message Lo {
  message Field4 {
    optional int32 field1 = 1;
    optional int32 field2 = 2;
    optional int32 field3 = 3;
  }
  optional FormatId format_id = 1;
  optional int32 Lj = 2;
  optional int32 sequence_number = 3;
  optional Field4 field4 = 4;
  optional int32 MZ = 5;
}

message Kob {
  message Pa {
    optional string video_id = 1;
    optional uint64 lmt = 2;
  }
  repeated Pa EW = 1;
}

message YPa {
  optional int32 field1 = 1;
  optional int32 field2 = 2;
  optional int32 field3 = 3;
}

message Zpa {
  optional FormatId format_id = 1;
  optional int32 startTimeMs = 2;
  optional int32 durationMs = 3;
  optional int32 field4 = 4;
  optional int32 field5 = 5;
  optional Kob field9 = 9;
  optional YPa field11 = 11;
  optional YPa field12 = 12;
}

message Upa {
  message ClientInfo {
    optional string device_make = 12;
    optional string device_model = 13;
    optional int32 client_name = 16;
    optional string client_version = 17;
    optional string os_name = 18;
    optional string os_version = 19;
  }

  message Fqa {
    optional int32 type = 1;
    optional bytes value = 2;
  }

  message Gqa {
    message Hqa {
      optional int32 code = 1;
      optional string message = 2;
    }

    optional bytes field1 = 1;
    optional Hqa field2 = 2;
  }

  optional ClientInfo client_info = 1;
  optional bytes po_token = 2;
  optional bytes playback_cookie = 3;
  optional bytes gp = 4;
  repeated Fqa field5 = 5;
  repeated int32 field6 = 6;
  optional string field7 = 7;
  optional Gqa field8 = 8;
}

message OQa {
  repeated string field1 = 1;
  optional bytes field2 = 2;
  optional string field3 = 3;
  optional int32 field4 = 4;
  optional int32 field5 = 5;
  optional string field6 = 6;
}

message Pqa {
  repeated FormatId format_ids = 1;
  repeated Zpa ud = 2;
  optional string clip_id = 3;
}

message SabrRequest {
  optional MediaInfo media_info = 1;
  repeated FormatId format_ids = 2;
  repeated Zpa ud = 3;
  optional bytes video_playback_ustreamer_config = 5;
  optional Lo lo = 6;
  repeated FormatId audio_format_ids = 16;
  repeated FormatId video_format_ids = 17;
  optional Upa sc = 19; 
  optional OQa field21 = 21;
  optional int32 field22 = 22;
  optional int32 field23 = 23;
  repeated Pqa field1000 = 1000;
}